2021-05-10  Andres Gonzalez  <andresg_22@apple.com>

        Fix for assert crash in AXObjectCache::visiblePositionForTextMarkerData.
        https://bugs.webkit.org/show_bug.cgi?id=225303
        <rdar://problem/77453921>

        Reviewed by Chris Fleizach.

        * accessibility/mac/pseudo-element-text-markers-expected.txt: Added.
        * accessibility/mac/pseudo-element-text-markers.html: Added.

2021-05-10  Ryan Haddad  <ryanhaddad@apple.com>

        [iOS] WPT css/css-color-adjust/rendering/dark-color-scheme/color-scheme-system-colors.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=225607

        Unreviewed test gardening.

        * platform/ios/TestExpectations:

2021-05-10  Ryan Haddad  <ryanhaddad@apple.com>

        [iOS] imported/w3c/web-platform-tests/css/css-flexbox/flex-item-compressible-001.html is failing after WPT re-sync
        https://bugs.webkit.org/show_bug.cgi?id=225604

        Unreviewed test gardening.

        Rebaseline test for iOS.

        * platform/ios/imported/w3c/web-platform-tests/css/css-flexbox/flex-item-compressible-001-expected.txt:

2021-05-10  Ryan Haddad  <ryanhaddad@apple.com>

        [iOS] WPT css-fonts/font-feature-resolution-001.html and css-fonts/font-feature-resolution-002.html are failing
        https://bugs.webkit.org/show_bug.cgi?id=225606

        Unreviewed test gardening.

        * platform/ios/TestExpectations:

2021-05-10  Wenson Hsieh  <wenson_hsieh@apple.com>

        [macOS] ImageOverlayController should paint selection quads instead of bounding rects
        https://bugs.webkit.org/show_bug.cgi?id=225585
        <rdar://problem/77725745>

        Reviewed by Tim Horton.

        Add a new layout test to cover the change. Currently, the below test case renders a visible selection rect in
        the image overlay since we render the bounding rect of the overlay text quad, which intersects with the image