@@ -2,26 +2,20 @@
 <html>
 <head>
 <script src="../../resources/js-test-pre.js"></script>
+<script src="../../resources/accessibility-helper.js"></script>
 </head>
-<body id="body">
-
-<div id="content">
+<body>
 
 <button id="button" aria-expanded="false">
-
-</div>
 
 <p id="description"></p>
 <div id="console"></div>
 
 <script>
-
     description("This tests that aria-expanded changes will send notifications.");
 
-    var element = 0;
-    var notification = 0;
     var notificationCount = 0;
-    function ariaCallback(element, notification) {
+    function notificationCallback(element, notification) {
         if (notification == "AXExpandedChanged") {
            notificationCount++;
 
@@ -37,19 +31,23 @@
     if (window.accessibilityController) {
         window.jsTestIsAsync = true;
 
-        var addedNotification = accessibilityController.addNotificationListener(ariaCallback);
+        accessibilityController.addNotificationListener(notificationCallback);
         var button = accessibilityController.accessibleElementById("button");
         debug("Initial expanded status: " + button.isExpanded);
 
         document.getElementById("button").setAttribute("aria-expanded", "true");
+        setTimeout(async () => {
+            await waitFor(() => {
+                return button.isExpanded;
+            });
 
-        setTimeout(function() {
             document.getElementById("button").setAttribute("aria-expanded", "false");
-        }, 10);
+            await waitFor(() => {
+                return !button.isExpanded;
+            });
+        }, 0);
     }
-
 </script>
-
 <script src="../../resources/js-test-post.js"></script>
 </body>
 </html>
