@@ -2265,8 +2265,6 @@ webkit.org/b/225484 imported/w3c/web-platform-tests/css/css-animations/translati
 
 webkit.org/b/225425 [ Debug ] webgl/1.0.3/conformance/glsl/misc/expression-list-in-declarator-initializer.html [ Pass Timeout ]
 
-webkit.org/b/205410 accessibility/mac/expanded-notification.html [ Pass Failure ]
-
 webkit.org/b/225523 webrtc/direction-change.html [ Pass Failure ]
 
 webkit.org/b/22525 webrtc/video-replace-muted-track.html [ Pass Failure ]
